fix: dropdown menu was always visible

--- a/docs/assets/styles.css
+++ b/docs/assets/styles.css
@@ -461,13 +461,13 @@ input[type="checkbox"] + label {
   flex-direction: column;
   align-items: stretch;
   justify-content: start;
-  display: none;
   position: absolute;
   background-color: var(--theme-shade);
   padding: 0.5rem;
   border-radius: 1rem;
   width: max-content;
   top: 3rem;
+  display: none !important;
 }
 .w-dropdown .w-dropdown-menu .w-button {
   border-radius: 0.5rem;
@@ -488,7 +488,7 @@ input[type="checkbox"] + label {
   z-index: -1;
 }
 .w-dropdown.open .w-dropdown-menu {
-  display: initial;
+  display: flex !important;
 }
 .w-field {
   display: flex;
